Add com.agilejava.docbkx maven plugin and a xsl to generate pdf document.